@@ -1,2 +1,0 @@
-/* Auto-generated at build time. */
-#define SVN_REV "7499M"
