@@ -16,8 +16,12 @@ else.  With this, include the file(s) that you changed.
 Changes for SVN:
 
 Adding svnversion.h to SVN was not a good idea.  It will get re-committed over
-and over even though that was not the intent.  Removed.
+and over even though that was not the intent.  Removed.  Move include prior to
+all other directories to be sure svnversion.h is built prior to inclusion in
+any other source file.
+  Makefile.am
   include/svnversion.h
+  include/version.h
 Kevin Bulgrien 2007-11-09
 
 Add Log() support to python scripts
